--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4 #its going to clone the repository
-    - name: Build the Docker image #build the docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build the Docker image with tag #build the docker image
+      run: docker build . --file Dockerfile --tag my-image-name:$({github.run_number})
+    - name: Build latest
+      run: docker build . --file Dockerfile --tag my-image-name
