--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build the Docker image with tag #build the docker image
       run: docker build . --file Dockerfile --tag my-image-name:$({github.run_number})
     - name: Build latest
-      run: docker build . --file Dockerfile --tag my-image-name
+      run: docker build . --file Dockerfile --tag my-image-names
