--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4 #its going to clone the repository
     - name: Build the Docker image with tag #build the docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$({github.run_number})
+      run: docker build . --file Dockerfile --tag my-image-name:${{github.run_number}}
     - name: Build latest
       run: docker build . --file Dockerfile --tag my-image-names
+    - name: Login to Docker hub
+      run: docker login -u ${{secrets.REGISTRY_USERNAME}} -p ${{secrets.REGISTRY_PASS}}
+    - name: Tag image
+      run: docker tag my-image-name:${{github.run_number}} ${{secrets.REGISTRY_USERNAME}}/my-image-name:${{github.run_number}}
