--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     - name: Build latest
       run: docker build . --file Dockerfile --tag my-image-names
     - name: Login to Docker hub
-      run: docker login -u ${{secrets.REGISTRY_USERNAME}} -p ${{secrets.REGISTRY_PASS}}
+      run: docker login -u ${{secrets.REGISTORY_USERNAME}} -p ${{secrets.REGISTRY_PASS}}
     - name: Tag image
-      run: docker tag my-image-name:${{github.run_number}} ${{secrets.REGISTRY_USERNAME}}/my-image-name:${{github.run_number}}
+      run: docker tag my-image-name:${{github.run_number}} ${{secrets.REGISTORY_USERNAME}}/my-image-name:${{github.run_number}}
+    - name: Push image
+      run: docker push ${{secrets.REGISTORY_USERNAME}}/my-image-name:${{github.run_number}}
