--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,18 @@ jobs:
       run: docker tag my-image-name:${{github.run_number}} ${{secrets.REGISTORY_USERNAME}}/my-image-name:${{github.run_number}}
     - name: Push image
       run: docker push ${{secrets.REGISTORY_USERNAME}}/my-image-name:${{github.run_number}}
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps: 
+      - name: SSH to Server
+        uses: appleboy/ssh-action@v1.0.3
+    with:
+      host: 3.89.101.150
+      username: ec2-user
+      key: ${{secrets.KEY}}
+      script: |
+          docker stop resume || echo ""
+          docker rm resume || echo ""
+          docker run -d --name resume -p 8080:5001 ${{secrets.REGISTORY_USERNAME}}/my-image-name:${{github.run_number}}
