--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
           username: ec2-user
           key: ${{secrets.KEY}}
           script: |
+            IMAGE_NAME="${{ secrets.REGISTRY_USERNAME }}/my-image-name:${{ github.run_number }}"
             docker stop resume || echo ""
             docker rm resume || echo ""
-            docker run -d --name resume -p 8080:5001 ${{secrets.REGIST0RY_USERNAME}}/my-image-name:${{github.run_number}}
+            docker run -d --name resume -p 8080:5001 $IMAGE_NAME
